tests/fixtures/errors/compilation-errors/src/TypeError.elm
module TypeError exposing (error)

error = "a" + 1
